--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "vue": "^2.6.6"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
-    "node-sass": "^4.9.0",
+    "@vue/cli-plugin-babel": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
     "sass-loader": "^7.1.0",
+    "node-sass": "4.12.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
